--- a/code/style.css
+++ b/code/style.css
@@ -33,14 +33,13 @@ h4 {
 .header { /*Klar*/
     background: rgb(27, 27, 27);
     color:rgb(238, 237, 234);
+    font-family: 'Livvic', sans-serif;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    height: 80px;
-    padding: 0 20px; /*space på varje kort sida av header*/
-    width: 100%;
-  
+    justify-content:space-between;
+    height: 90px;
+    padding: 0 10px; /*space på varje kort sida av header*/ 
 }
 
 .mobile-hamburger { /*Klar*/
@@ -49,7 +48,7 @@ h4 {
     height: 20px;
     flex-direction: column;
     justify-content: space-between;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 
 /*** hamburger menu lines ***/
@@ -61,12 +60,10 @@ h4 {
 
 .logo { /*Klar*/
     width: 90px;
-    padding-right: 20px; /* ändrade lite här*/
 }
 
-.header h3 { /*Klar*/
+.header h1 { /*Klar*/
     margin: 0 auto;
-    font-family: 'Pacifico', cursive;
 }
 
 .navigation { /*Klar*/
@@ -76,7 +73,7 @@ h4 {
 .navigation a { /*Klar*/
     text-decoration: none;
     color: white;
-    margin: 0px 10px;
+    margin: 0px 15px;
 }
 
 
@@ -92,12 +89,10 @@ h4 {
 
 .big-news-container img {
     width: 100%; /*** anpassar sig efter skärm***/
-
 }
 
 .big-news-container div{
     text-align: center; 
-
 }
 
 /*** SMALL NEWS SECTION ***/
@@ -110,7 +105,11 @@ h4 {
     width: 100%;
 }
 
+.small-news {
+    display: flex;
+    flex-direction: column;
 
+}
 
 /*.small-news{
     display: flex;
@@ -132,8 +131,10 @@ h4 {
 }
 
 .small-news img {
-   width: 100%;
+   width: 50%;
    margin-top: 30px;
+   justify-content: center;
+   align-items:center;
 }
 
 
@@ -151,6 +152,23 @@ h4 {
     .mobile-hamburger{
         display:none; 
     }
+
+    .big-news-container .container {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .small-news a {
+        width: 40%;
+        flex-wrap: wrap;
+        flex-grow: 1;
+        
+    }
+
+
+
+ 
 }
 
 
