--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,6 @@
 html {
-  background: #F5F5F5;
-  color: rgb(0, 0, 0);
+  background: white;
+  color: #ffffff
 }
 
 body {
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-  background-color: #0F1626;
+  background-color: #070d59;
   display: flex;
   justify-content: space-between;
 }
@@ -31,24 +31,18 @@ a {
   text-decoration: none;
 }
 
-.all-news {
-  align-content: center;
-}
-
 .big-news {
- border: 1px solid black;
- margin: 15px;
- border-radius: 4px;
- box-shadow: 10px 10px gray;
- transition: transform .2s;
-}
-
-.big-news:hover {
-  transform: scale(1.1);
+  background-color: #1F3C88;
+  margin-bottom: 30px;
 }
  
 .main-image {
-  width: 400px;
+  width: 100%;
+  object-fit: cover;
+}
+
+h1 {
+  color: #ee6f57;
 }
 
 h2 {
@@ -56,58 +50,67 @@ h2 {
 }
 
 .article {
-  padding: 10px;
+  padding: 20px 25px;
+  text-align: justify;
 }
 
 .other-news {
   text-align: center;
+  color: black;
 }
 
 .news-card {
-  width: 300px;
-  height: 300px;
+  width: 90%;
+  margin: 20px;
   border: 1px solid black;
-  border-radius: 4px;
-  margin: 15px;
-  background: #e69f96;
   padding-bottom: 20px;
-  box-shadow: 10px 10px gray;
-  transition: transform .2s;
+  box-shadow: 7px 7px gray;
+  transition: transform .3s;
 }
 
 .news-card:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 .news-card img {
   width: 100%;
-  height: 250px;
+  height: 200px;
   object-fit: cover;
 }
 
 
 footer {
-  background-color: #0F1626;
+  background-color: #070d59;
   padding: 20px;
 }
 
-@media (max-width: 667px) {
+@media (max-width: 767px) {
+  .header {
+    display: flex;
+    justify-content: flex-start;
+  }
+
   .navigation-container {
     display: none;
   }
 }
 
-@media (min-width: 668px) {
-  .big-news {
+@media (min-width: 768px) {
+ .big-news {
     display: flex;
     flex-direction: row;
+  }
+
+  .main-image {
+    width: 50%;
+    object-fit: cover;
   }
   
   .other-news {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
   .news-card {
