--- a/code/style.css
+++ b/code/style.css
@@ -32,6 +32,13 @@ body {
   padding: 0px 40px;
 }
 
+.big-news-text p {
+  margin: 0 0 10px 0;
+  color: lightgray;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .big-news-img .img {
   width: 100%;
   height: 400px;
@@ -48,16 +55,17 @@ body {
 }
 
 .button {
-  background-color: #fff;
-  border: 1px solid black;
-  padding: 10px 20px;
+  background-color: #1976D2;
+  color: #fff;
+  border: none;
+  border-radius: 25px;
+  padding: 15px 25px;
   text-align: center;
   cursor: pointer;
 }
 
 .button:hover {
-  color: dodgerblue;
-  border: 1px solid dodgerblue;
+  background-color: #0D47A1;
 }
 
 /* SMAL NEWS MOBILE */
@@ -143,6 +151,11 @@ body {
   .navigation-container {
     display: flex;
     align-items: center;
+  }
+
+  .navigation-container a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
   }
 
   .navigation-container-logo {
