--- a/code/style.css
+++ b/code/style.css
@@ -16,7 +16,9 @@ body {
 }
 
 .container {
-    border: 3px solid white;
+    width: 420px;
+    height: 100%;
+    margin: 25px auto;
 }
 
 
@@ -25,33 +27,40 @@ body {
 header {
     background-color: #2a2c36;
     height: 70px;
-    border: 3px solid yellow;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin: 0 auto;
+    
+
 }
 
 header img {
     width: 80px;
-    height: 60px;
+       
+
 }
 
 nav {
     display: none;
+
 }
 
-nav a {
+.navigation-element {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     margin-left: 16px;
-}
+    }
 
 label.logo {
-    font: 40px bold;
+    font: 35px bold;
     padding: 0 40px;
     white-space: nowrap;
+    display:flex;
+
+
 }
 
 .hamburger-menu {
@@ -67,33 +76,83 @@ label.logo {
     width: 30px;
     height: 5px;
     background: #fff;
+    
+    
 }
 
 .hamburger-menu-img-container {
     display: flex;
     flex-direction: row;
+
+
 }
 
 
 /*** Big news ***/
 
-.big-news-container {
-    border: 3px solid green;
+.big-news-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 32px;
+    
+}
+
+.big-news-card{
+    width:100%;
+    height: 350px;
+    margin: 0px 16px 0 16px 0;
+    padding:0;
+    box-shadow: 5px 4px 4px #4d4f54;
+    background-color: #fff;
+    color: black;
+    box-sizing: border-box;
+    margin-bottom: 32px;
+       
+}
+
+.big-news-card .news-image{
+    width: 100%;
+    height: 230px;
+    flex-grow: 1;
+   
+}
+
+.news-text{
+    flex: 1;
+    height: 50px;
+    font-size: 15px;
+    text-align: center;
+
+
 }
 
 
 /*** Sub news ***/
 
 .sub-news-container {
-    border: 3px solid red;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-article {
+.sub-news-card{
+    width:100%;
+    height: 350px;
+    margin: 0px 16px 0 16px 0;
+    padding:0;
+    box-shadow: 5px 4px 4px #4d4f54;
     background-color: #fff;
-    margin: 16px;
     color: black;
-    padding: 10px;
     box-sizing: border-box;
+    margin-bottom: 32px;
+       
+}
+
+.sub-news-card .news-image{
+    width: 100%;
+    flex-grow: 1;
+   
 }
 
 
@@ -112,26 +171,94 @@ footer {
 
 /***Media Queries***/
 
-@media screen and (min-width: 668px) and (max-width: 1024px) {
-    nav {
-        display: inline-flex;
-    }
-    .hamburger-menu {
-        display: none;
-    }
-    header img {
-        margin: 0 16px;
-    }
+@media (min-width: 768px) {
+.container {
+    width: 768px;
 }
 
-@media screen and (min-width: 1025px) {
-    nav {
-        display: inline-flex;
-    }
-    .hamburger-menu {
-        display: none;
-    }
-    header img {
-        margin-right: 16px;
-    }
+nav {
+    display: flex;
+}
+
+.hamburger-menu{
+    display: none;
+}
+
+header img {
+    margin-right: 16px;
+}
+
+label.logo {
+    font: 35px bold;
+    padding: 0 10px;
+    white-space: nowrap;
+    display:flex;
+}
+
+
+.navigation-element {
+    font-size: 14px;
+}
+
+.big-news-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 32px;
+}
+
+.big-news-card {
+    width: 45%;
+    margin-bottom: 32px;    
+}
+
+.sub-news-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 32px;
+}
+
+
+.sub-news-card {
+    width: 22.5%;
+    margin-bottom: 32px;    
+}
+
+}
+
+@media (min-width: 1024px) {
+.container {
+    min-width: 1024px;
+}
+
+label.logo {
+    font: 35px bold;
+    padding: 0 40px;
+}
+
+.navigation-element {
+    font-size: 16px;
+}
+
+.big-news-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;    
+}
+
+.big-news-card {
+    width: 22.5%;
+}
+
+.sub-news-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+
+.sub-news-card {
+    width: 16%;
+}
 }
