--- a/code/style.css
+++ b/code/style.css
@@ -10,21 +10,16 @@
     padding: 0 16px;
     margin: -8px;
     font-family: 'Staatliches', cursive;
-    justify-content: space-between;
-    
+    justify-content: space-between;    
 }
 
 .header-logo {
     width: 180px;
-
 }
-
 .site-title {
     color:white;
     font-size: 58px;
     display: flex;
-    
-
 }
 
 .header-logo-container {
@@ -33,8 +28,7 @@
     height: 100px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    
+    justify-content: center;   
 }
 
 .navigation-container {
@@ -55,7 +49,6 @@
 
 .nav-link:any-link {
     color:rgb(9, 85, 32); 
-
 }
 /**** BIG NEWS ****/
 
@@ -70,9 +63,9 @@
     flex-flow: column wrap;
     margin: 70px 20px 20px 20px;
     width:90%;
-  }  
+}  
 
-  .big-news:hover {
+.big-news:hover {
     box-shadow: 18px 0 18px grey;
 }
 
@@ -87,26 +80,27 @@
 .small-news {
     display: flex; 
     flex-flow:column wrap;    
-  }
+}
   
-  .small-news a {
+.small-news a {
     border: 2px solid black;
     display:flex;
     background: whitesmoke;  
     margin: 10px 20px;
     text-align: center;  
     width: 90%;    
-  }
+}
 
-  .small-news a:hover {
+.small-news a:hover {
 
     box-shadow: 18px 0 18px grey;
   
-  }
+}
 
     .small-news img {
     width:500px;
     height:500px;
+    overflow: hidden;
 }
 
   /***RESPONSIVE***/
