add test changes

--- a/code/style.css
+++ b/code/style.css
@@ -20,10 +20,9 @@ html {
 
 }
 
-.nav {
-  display: block;
-  padding: 50px;
-  margin: 60px;
+.navigation {
+  color: aliceblue;
+  display: inline;
   
 
 
