fixed picture file paths

--- a/code/style.css
+++ b/code/style.css
@@ -56,7 +56,7 @@ body {
   display: flex;
   position: relative;
   justify-content: flex-end;
-  background-image: url("../pictures/ISS.jpg");
+  background-image: url("./pictures/ISS.jpg");
   background-attachment: fixed;
   background-size: cover;
   height: 35em;
@@ -527,7 +527,7 @@ p:hover {
 
   .header {
     height: 25em;
-    background-image: url("../pictures/ISS1280px.jpg");
+    background-image: url("./pictures/ISS1280px.jpg");
     justify-content: flex-end;
     align-items: flex-end;
   }
