--- a/code/style.css
+++ b/code/style.css
@@ -5,7 +5,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 300px 850px auto auto auto 200px;
+  grid-template-rows: 200px 20% auto auto auto 200px;
   grid-template-areas:
     "header"
     "hero"
@@ -56,27 +56,15 @@ footer {
   border-top: 2px solid orange;
 }
 
-nav,
-header > figure {
+/* Hide header links and promo imgs in mobile */
+.nav-links,
+.promo-img {
   display: none;
 }
 
 /* ======= ELEMENT STYLING ======= */
 
-/* TYPOGRAPHY & GLOBAL STYLES */
-span,
-p {
-  font-family: Georgia, Times, serif;
-  font-size: 14px;
-  margin: 1em;
-}
-a {
-  font-family: "Oswald", Helvetica, sans-serif;
-  font-weight: 300;
-  text-decoration: none;
-  color: black;
-  font-size: 1.5em;
-}
+/* TYPOGRAPHY & GENERAL STYLES */
 h1 {
   font-family: "rieslingregular", Helvetica, sans-serif;
   font-size: 8em;
@@ -84,24 +72,38 @@ h1 {
   text-align: center;
   margin: 0;
 }
-h3 {
-  font-family: "Oswald", Helvetica, sans-serif;
-  color: white;
-  font-size: 2em;
-  font-weight: 300;
+span,
+p {
+  font-family: Georgia, Times, serif;
+  font-size: 14px;
+  margin: 1em;
 }
+a,
+h3,
 h4 {
   font-family: "Oswald", Helvetica, sans-serif;
+  font-weight: 300;
+}
+a {
+  text-decoration: none;
+  color: black;
   font-size: 1.5em;
-  font-weight: 200;
+}
+
+h3 {
+  color: white;
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5em;
   margin: 0;
   margin-bottom: 1em;
   color: orange;
 }
 
-/* Unique Typography */
-.btn-side-nav span {
-  font-size: 3em;
+ul {
+  list-style: none;
 }
 
 h3,
@@ -110,16 +112,17 @@ footer a,
 h2 {
   text-transform: uppercase;
 }
-footer span {
-  margin: 5px 0;
-}
-footer a {
-  font-size: 1em;
+
+.btn-side-nav span {
+  font-size: 3em;
 }
 
-ul {
-  list-style: none;
+.overlay a {
+  padding: 8px;
+  font-size: 4em;
+  color: #818181;
 }
+
 .box-info h3,
 .article-column h3,
 .article-list h3 {
@@ -133,22 +136,18 @@ ul {
   text-align: center;
 }
 
+footer span {
+  margin: 5px 0;
+}
+footer a {
+  font-size: 1em;
+}
+
 #news-boxes,
 #news-column {
   margin-top: 3em;
   padding-top: 2em;
   border-top: 4px double orange;
-}
-
-/* HEADER */
-.btn-side-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.title {
-  align-self: center;
-  grid-area: title;
 }
 
 /* FULLSCREEN SIDEBAR */
@@ -160,27 +159,24 @@ ul {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.9);
+  flex-flow: column nowrap;
 }
 
-.overlay a {
-  padding: 8px;
-  font-size: 4em;
-  color: #818181;
+.overlay-content {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
 }
 
 .overlay a.closebtn {
-  justify-content: flex-end;
-  margin-right: 10%;
-  margin-top: 10%;
+  align-self: flex-end;
+  margin-right: 5%;
+  font-size: 6em;
 }
 
 .overlay a:nth-child(4) {
   padding-bottom: 1em;
-  margin: 0 20% 0 20%;
   border-bottom: 2px solid;
 }
 .overlay a:nth-child(5) {
@@ -192,9 +188,11 @@ ul {
   background-color: #2c3e50;
   position: relative;
 }
+
 #hero .article-image {
   opacity: 0.4;
 }
+
 .article-image {
   background-size: cover;
   background-position: center;
@@ -210,9 +208,11 @@ ul {
   text-align: right;
   text-shadow: 1px 1px 0 black;
 }
+
 .article-info h3 {
   margin-top: 0;
 }
+
 .category {
   color: orange;
 }
@@ -231,6 +231,7 @@ ul {
   height: 200px;
   width: 60%;
 }
+
 .box-info {
   display: flex;
   flex-direction: column;
@@ -245,6 +246,7 @@ ul {
   text-align: justify;
   align-items: center;
 }
+
 .author {
   color: grey;
   text-transform: none;
@@ -257,6 +259,7 @@ ul {
   border-top: 4px double orange;
   grid-area: news-list;
 }
+
 .article-list {
   display: flex;
   flex-flow: row nowrap;
@@ -265,6 +268,7 @@ ul {
   padding: 1em;
   border: 3px double gray;
 }
+
 .list-info {
   display: flex;
   flex-flow: column nowrap;
@@ -284,7 +288,8 @@ ul {
 /* ======= MEDIUM DEVICES ======= */
 @media (min-width: 768px) {
   body {
-    width: 743px;
+    grid-template-rows: 200px 15% auto auto auto 200px;
+    min-width: 743px;
   }
 
   header {
@@ -309,10 +314,12 @@ ul {
   #news-boxes {
     flex-flow: row wrap;
   }
+
   .box-item {
     height: 50%;
     width: 50%;
   }
+
   .box-item:last-of-type {
     width: 100%;
   }
@@ -326,7 +333,7 @@ ul {
     display: none;
   }
 
-  /* STYLING ELEMENTS */
+  /* --- ELEMENT STYLING --- */
 
   /* HEADER */
   .promo-img {
@@ -357,7 +364,7 @@ ul {
 @media (min-width: 1200px) {
   body {
     grid-template-columns: auto 250px;
-    grid-template-rows: auto 400px auto 1fr 200px;
+    grid-template-rows: auto 400px auto auto 200px;
     grid-template-areas:
       "header header"
       "hero hero"
