--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 html {
-  background:white;
+  background:#f2f2f2;
   color:black;
 }
 
@@ -182,6 +182,7 @@ nav {
   box-shadow: 12px 12px #FF70A6;
   transition: 0.5s ease;
   border: 0.1px solid lightgrey;
+  margin-bottom: 40px;
 }
 
 .interview:hover {
@@ -215,8 +216,26 @@ nav {
 
   /* FOOTER */
 
-footer {
-  margin: 10px;
+.footer {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #FF70A6;
+}
+
+.link-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.footer-links {
+  margin-right: 15px;
+}
+
+.copywrite {
   text-align: center;
 }
 
