--- a/code/style.css
+++ b/code/style.css
@@ -1,148 +1,186 @@
 @import url('https://fonts.googleapis.com/css2?family=Livvic&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
-body {
+* {
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
-    /*box-sizing: border-box;*/
-}
-
-h1{
-    font-size: 30px;
-    line-height: 22px; /*** Kolla upp ***/
-}
-
-h3 {
-    font-size: 25px;
-}
-
-h4 {
-    font-size: 18px;
-}
-
-.container { 
-    width: 100%;
-    max-width: 1100px; 
-    margin: 0 auto;
     padding: 0;
-  }
+    box-sizing: border-box;
+}
 
-/***** HEADER ******/ /*Klar*/
+body{
+    font-family: 'Montserrat', sans-serif;
+    background-color:#fcfcfc;
+}
 
-.header { /*Klar*/
-    background: rgb(27, 27, 27);
-    color:rgb(238, 237, 234);
+.container {
+    /* For phone*/
+    width: 320px;
+    margin: 25px auto;
+    
+}
+
+
+/***** HEADER ******/
+.header {
+    background-color: #1b1b1b;
+    color:#eeedea;
     font-family: 'Livvic', sans-serif;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:space-between;
-    height: 90px;
-    padding: 0 10px; /*space på varje kort sida av header*/ 
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
 }
 
-.mobile-hamburger { /*Klar*/
+.logo { 
+    display: flex;
+    width: 80px;
+    padding-left: 10px;
+   }
+
+.header-title {
+    margin: 0%;
+    font-size: 16px;
+    padding: 0 10px;
+}
+
+.header-title {
+    display: none;
+}
+
+.mobile-hamburger { 
     display: flex;
     width: 20px;
     height: 20px;
     flex-direction: column;
     justify-content: space-between;
-    margin-right: 15px;
+    margin-right: 20px;
 }
 
-/*** hamburger menu lines ***/
-.mobile-hamburger div { /*Klar*/
+.mobile-hamburger div {
     width: 25px;
     height: 2px;
-    background: rgb(238, 237, 234);
+    background: #eeedea;
 }
 
-.logo { /*Klar*/
-    width: 90px;
-}
-
-.header h1 { /*Klar*/
-    margin: 0 auto;
-}
-
-.navigation { /*Klar*/
+.navigation {
     display: none;
 }
 
-.navigation a { /*Klar*/
+.navigation a { 
     text-decoration: none;
     color: white;
     margin: 0px 15px;
 }
 
+.mobile-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0;
+    text-align: center;
+    font-family: 'Livvic', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+}
 
-/*** BIG NEWS SECTION ***/
+
+
+/************** BIG NEWS SECTION ******************/
 .big-news-container .container {
+    background-color:#fcfcfc;
+    color: #2c2c2c;;
     padding: 20px 0px;
     display: flex;
-    flex-direction: column; /*** Under varandra på rad ***/
-    justify-content: center;
+    flex-direction: column; 
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 
 .big-news-container img {
-    width: 100%; /*** anpassar sig efter skärm***/
+    width: 100%; 
 }
 
 .big-news-container div{
-    text-align: center; 
+    text-align: center;
+    line-height: 25px;
+    padding: 10px; 
+    margin: 10px;
 }
 
-/*** SMALL NEWS SECTION ***/
+.big-news-container .container h1 {
+    font-size: 24px;
+    line-height: 30px;
+}
 
+
+/************* SMALL NEWS SECTION ***************/
 .small-news-container .container {
     background-color: #fcfcfc;
-    text-align: center;
-    padding: 10px 0px;
-    color: #2c2c2c;
+    /*background-color: mediumpurple; */
+    color: #424141;
+    padding: 20px 50px;
     width: 100%;
+    /*border: 2px solid black; */
+}
+
+.small-news-container .container div{
+    text-align: center;
+    line-height: 20px;
+    padding: 10px;
+    margin: 10px;
+    /*border: 2px solid black; */
+}
+
+.small-news-container .container h2 {
+    line-height: 50px;
 }
 
 .small-news {
     display: flex;
     flex-direction: column;
-
+    justify-content: space-between;
+    align-items: center;
+    /*border: 2px solid black;*/
 }
-
-/*.small-news{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 20;
-} */
 
 .small-news a {
     background-color: #fcfcfc;
-    border: 1px solid black;
     border-radius: 2%; 
-    width: 100%; 
     text-decoration: none;
     color: #423c3c;
     box-shadow: 5px 5px 0 0 #ebe3e3;
-    margin-bottom: 42px;
+    margin-bottom: 20px;
     text-align: center;
-    padding: 0px 10px;
+    padding: 20px 40px;
 }
 
 .small-news img {
-   width: 50%;
+   width: 100%;
    margin-top: 30px;
-   justify-content: center;
-   align-items:center;
-}
+   margin-bottom: 10px;
+  }
 
 
-/*** MEDIA QUERIES ***/
 
-@media (min-width: 767px){
+
+/******** MEDIA QUERIES ***********/
+@media (min-width: 768px) {
+    /* Tablet view */
+
+    .container {
+        width: 768px;
+    }
+/***** HEADER ******/
+
     .header{
         justify-content: space-between;
+    }
+
+    .header-title {
+        display: none;
     }
 
     .navigation {
@@ -153,26 +191,53 @@ h4 {
         display:none; 
     }
 
-    .big-news-container .container {
+    /************** BIG NEWS SECTION ******************/
+
+   .big-news-container .container {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        padding: 15px 20px;
     }
 
-    .small-news a {
-        width: 40%;
-        flex-wrap: wrap;
-        flex-grow: 1;
-        
+    .big-news-container .container div {
+        width: 50%;
     }
-
-
-
- 
 }
 
 
-@media (min-width: 992px){
+@media (min-width: 992px) {
+    /* Desktop view */
+    
+    .container {
+        width: 992px;
+    }
+
+    /***** HEADER ******/
+
+    .header{
+        justify-content: space-between;
+    }
+
+    .logo {
+        width: 110px;
+    }
+
+    .header-title {
+        display: inline-block;
+        font-size: 30px;
+        padding-left: 150px;
+    }
+    
+  
+    .navigation {
+        display: inline-block;
+    }
+
+    .mobile-hamburger{
+        display:none; 
+    }
+
     .navigation a {
         transition: all 0.8s ease 0s;
     }
@@ -182,22 +247,19 @@ h4 {
         text-decoration: underline;
     }
 
-    /*.big-news-container .container {
+    /************** BIG NEWS SECTION ******************/
+
+    .big-news-container .container {
+        display: flex;
         flex-direction: row;
+        justify-content: space-between;
         align-items: center;
+        padding: 15px 20px;
     }
 
-    .big-news-container img {
-        width: 100%; 
+    .big-news-container div {
+        padding: 0px 20px;
+        margin: 0;
+        
     }
-
-    .small-news img {
-        width: 90%;
-    }
-
-    .small-news a { 
-        margin-left: 20px;
-        width: 40%; 
-        flex-grow: 1;
-    } */
 }
