--- a/code/style.css
+++ b/code/style.css
@@ -52,15 +52,28 @@ nav {
     text-decoration: none;
     text-transform: uppercase;
     margin-left: 16px;
-    }
+}
 
-label.logo {
+.logo {
     font: 35px bold;
+    color: white;
     padding: 0 40px;
     white-space: nowrap;
     display:flex;
+    position: relative;
+}
 
+.logo::before{
+    content: "Winter NEWS";
+    color: #ff3801;
+    width:0;
+    position: absolute;
+    overflow: hidden;
+    transition: width 0.9s;
+}
 
+.logo:hover::before{
+    width:100%;
 }
 
 .hamburger-menu {
@@ -108,8 +121,12 @@ label.logo {
     color: black;
     box-sizing: border-box;
     margin-bottom: 32px;
+    position: relative;
+    z-index: 1;
        
 }
+
+
 
 .big-news-card .news-image{
     width: 100%;
@@ -125,6 +142,11 @@ label.logo {
     text-align: center;
 
 
+}
+
+.news-text:hover{
+    text-decoration: underline;
+    color: dimgray;
 }
 
 
@@ -188,7 +210,7 @@ header img {
     margin-right: 16px;
 }
 
-label.logo {
+.logo {
     font: 35px bold;
     padding: 0 10px;
     white-space: nowrap;
@@ -198,6 +220,11 @@ label.logo {
 
 .navigation-element {
     font-size: 14px;
+}
+
+.navigation-element:hover {
+    text-decoration: underline;
+    color: #ff3801;
 }
 
 .big-news-container {
@@ -232,7 +259,7 @@ label.logo {
     min-width: 1024px;
 }
 
-label.logo {
+.logo {
     font: 35px bold;
     padding: 0 40px;
 }
