--- a/code/style.css
+++ b/code/style.css
@@ -93,6 +93,7 @@ article p:nth-child(3) {
 
 .small-news {
   width: 95%;
+  max-width: 1260px;
   display: grid;
   grid-template-rows: repeat(8, 1fr);
   grid-gap: 20px;
