--- a/code/style.css
+++ b/code/style.css
@@ -1,28 +1,47 @@
 
+/*** HEADER ***/
+
 .header {
   display: flex;
   justify-content: space-between;
-  align-content: center;
-  padding: 20px 10px 10px;
+  align-items: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .logo {
-  width: 70px;
+  width: 20%;
+  margin-left: 10px
 }
 
-.nav-container {
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-el {
   display: none;
 }
 
-.nav-item {
-  margin-right: 15px;
-  padding: 10px 5px 10px;
-  text-decoration: none;
-  color: black;
+/*** HAMBURGER MENU ***/
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 20px;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-right: 25px;
 }
-.nav-item:nth-child(4) {
-  margin-right: 0px;
+
+.hamburger div {
+  width: 30px;
+  height: 2px;
+  background-color: gray;
+  border-radius: 5px;
 }
+
+
 
 h1, h2 {
   font-family: 'Montserrat', sans-serif;
@@ -42,6 +61,8 @@ footer {
 footer p {
   padding: 20px auto;
   font-family: 'Montserrat', sans-serif;
+  color: #A4A4A4;
+  font-size: 10px;
 }
 
 /*** MAIN NEWS ***/
@@ -91,7 +112,7 @@ footer p {
 .news-card {
   margin-bottom: 30px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-  opacity:1;
+  opacity: 1;
 }
 
 .news-card:hover {
@@ -112,8 +133,32 @@ footer p {
 /*** TABLET ***/
 
 @media (min-width: 768px) {
-  .nav-container {
+  
+  .hamburger {
+    display: none;
+  }
+
+  .nav {
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .nav-elements {
+    min-width: 442px;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 10px;
+  }
+
+  .nav-el {
+    display: inline;
+    padding: 10px 5px 10px;
+    text-decoration: none;
+    color: black;
+    margin-right: 5px;
+  }
+  .nav-el:nth-child(4) {
+    margin-right: 0px;
   }
 
   a:hover {
@@ -168,7 +213,7 @@ footer p {
 
 /*** DESKTOP ***/
 
-@media (min-width: 992px) {
+@media (min-width: 1100px) {
   
   h1 {
     font-size: 50px;
